[package]
name = "rodio"
version = "0.16.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "Audio playback library"
documentation = "http://docs.rs/rodio"
exclude = ["assets/**", "tests/**"]
edition = "2018"
keywords = ["audio", "playback", "gamedev"]
license = "MIT OR Apache-2.0"

[dependencies]
cpal = "0.14.2"
claxon = { version = "0.4.2", optional = true }
hound = { version = "3.3.1", optional = true }
lewton = { version = "0.10", optional = true }
minimp3 = { version = "0.5.0", optional = true }
symphonia = {version = "0.5.2", optional = true }

[features]
default = ["wav", "mp3"]

wav = ["hound"]
mp3 = ["symphonia-mp3"]
wasm-bindgen = ["cpal/wasm-bindgen"]
symphonia-mp3 = ["symphonia/mp3"]

[dev-dependencies]
quickcheck = "0.9.2"

[[example]]
name = "music_m4a"
required-features = ["symphonia-isomp4", "symphonia-aac"]
